[gd_scene load_steps=12 format=3 uid="uid://be7tuc1i6yq5b"]

[ext_resource type="Script" path="res://menus/news_list/MainMenuRight.gd" id="1"]
[ext_resource type="StyleBox" path="res://styles/PanelStyleTransparentIconHover.tres" id="3"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://cgkq7divjs4o6" path="res://graphics/icons/discord_main_join.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://58gmorfx1ujw" path="res://graphics/icons/twitter_main.svg" id="7"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="8"]
[ext_resource type="FontVariation" uid="uid://nyc27vir054y" path="res://fonts/default_font_bold.tres" id="9_cyc42"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://diw3qc73g27lv" path="res://graphics/icons/account_main.svg" id="11"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 25.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0.6, 0.0901961, 0.556863, 0.74902)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 25.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0.19, 0.07, 0.3, 0.75)
border_width_left = 133
border_color = Color(0.6, 0.0901961, 0.556863, 0.74902)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.856
offset_bottom = -0.480042
theme_override_constants/separation = 25
alignment = 2

[node name="SocialButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../NewsButtons")
focus_mode = 2
theme_override_constants/separation = 15
alignment = 1
script = ExtResource("10")
orientation = 1

[node name="OpenProfileButton" type="Button" parent="VBoxContainer/SocialButtons"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8")
theme_override_styles/hover = SubResource("1")
theme_override_styles/normal = SubResource("2")
text = "My profile"
icon = ExtResource("11")
script = ExtResource("4")
normal_style = SubResource("2")
hover_style = SubResource("1")

[node name="DiscordButton" type="Button" parent="VBoxContainer/SocialButtons"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8")
theme_override_styles/hover = SubResource("1")
theme_override_styles/normal = SubResource("2")
icon = ExtResource("5")
script = ExtResource("4")
normal_style = SubResource("2")
hover_style = SubResource("1")

[node name="Label" type="Label" parent="VBoxContainer/SocialButtons/DiscordButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 123.0
theme_override_fonts/font = ExtResource("8")
text = "Join the Discord server!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TwitterButton" type="Button" parent="VBoxContainer/SocialButtons"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8")
theme_override_styles/hover = SubResource("1")
theme_override_styles/normal = SubResource("2")
icon = ExtResource("7")
script = ExtResource("4")
normal_style = SubResource("2")
hover_style = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SocialButtons/TwitterButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 123.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/SocialButtons/TwitterButton/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
text = "Follow us on Twitter!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer/SocialButtons/TwitterButton/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_cyc42")
text = "@PHeartbeatGame"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3")

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.41418
offset_bottom = -1.41418
theme_override_fonts/font = ExtResource("8")
text = "NEWS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewsButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SocialButtons")
focus_mode = 2
theme_override_constants/separation = 25
script = ExtResource("10")
orientation = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="pressed" from="VBoxContainer/SocialButtons/OpenProfileButton" to="." method="_on_OpenProfileButton_pressed"]
